--- a/practice/breaking.css
+++ b/practice/breaking.css
@@ -2,4 +2,5 @@
 {
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 color: #edb51e;
+text-align: center;
 }
