Add text-shadow to .new class in breaking.css for enhanced visual effect

--- a/practice/breaking.css
+++ b/practice/breaking.css
@@ -3,4 +3,5 @@
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 color: #edb51e;
 text-align: center;
+text-shadow: #edb51e 2px 2px 4px;
 }
