--- a/practice/breaking.css
+++ b/practice/breaking.css
@@ -6,3 +6,15 @@ text-align: center;
 text-shadow: #edb51e 2px 2px 4px;
 font-size: 40px;
 }
+
+
+.content
+{
+    
+margin: 20px;
+padding: 20px;
+border: 2px solid black;
+background-color: #f0f0f0;
+font-family: Arial, Helvetica, sans-serif;
+    
+}
