Update color and text-shadow properties in .new class for improved aesthetics

--- a/practice/breaking.css
+++ b/practice/breaking.css
@@ -1,14 +1,14 @@
 .new
 {
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-color: #edb51e;
+color: #d83d09;
 text-align: center;
-text-shadow: #edb51e 2px 2px 4px;
+text-shadow: #d82e10 2px 2px 4px;
 font-size: 40px;
 margin: 20px;
 padding: 10px;
-box-shadow: #edb51e 0px 0px 10px;
-text-shadow: #edb51e 2px 2px 4px;
+box-shadow: #dd3e13 0px 0px 10px;
+text-shadow: #d54215 2px 2px 4px;
 }
 
 
