--- a/practice/breaking.css
+++ b/practice/breaking.css
@@ -11,17 +11,13 @@ box-shadow: #dd3e13 0px 0px 10px;
 text-shadow: #d54215 2px 2px 4px;
 }
 
-
 .content
-{
-    
+{  
 margin: 20px;
 padding: 20px;
 border: 2px solid black;
-background-color: #f0f0f0;
+background-color: #e44949;
 font-family: Arial, Helvetica, sans-serif;
 font-size: 18px;
 line-height: 1.6;
-
-    
 }
