--- a/html5/styles/style.css
+++ b/html5/styles/style.css
@@ -1,4 +1,8 @@
-nav li text-decoration: none;
+nav li a {text-decoration: none;
 color: #333;
 font-weight: bold;
+}
+
+nav li{
+    list-style: none;
 }
