--- a/html5/styles/style.css
+++ b/html5/styles/style.css
@@ -1,8 +1,9 @@
 nav li a {text-decoration: none;
-color: #333;
-font-weight: bold;
+
 }
 
 nav li{
     list-style: none;
-}
+    display: inline;
+    margin-right: 15px;
+    }
