--- a/html5/styles/style.css
+++ b/html5/styles/style.css
@@ -10,3 +10,8 @@ nav li{
     nav li :hover{
         background-color: lightpink;
     }
+
+    footer{
+       
+        text-align: center;
+    }
